kali_agent_v4/phase14/k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaliagent-ml-service
  namespace: ml-platform
  labels:
    app: kaliagent-ml
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9090
    targetPort: 9090
    protocol: TCP
    name: metrics
  selector:
    app: kaliagent-ml
